<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nazivdrugeekipeigra"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginTop="92dp"
        android:background="@color/bela"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="@string/Vi"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nazivprveekipeigra"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginTop="92dp"
        android:background="@color/bela"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="@string/Mi"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bodovimi"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:background="@color/bela"
        android:gravity="center"
        android:text="@string/bodovi"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nazivprveekipeigra" />

    <TextView
        android:id="@+id/bodovivi"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:background="@color/bela"
        android:gravity="center"
        android:text="@string/bodovi"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nazivdrugeekipeigra" />

    <Button
        android:id="@+id/noviunos"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:text="@string/novaigra"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodovimi"
        app:layout_constraintVertical_bias="0.336" />

    <TextView
        android:id="@+id/rezultatmi"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodovimi" />

    <TextView
        android:id="@+id/rezultatvi"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bodovivi" />

    <Button
        android:id="@+id/obrisibutton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="65dp"
        android:text="@string/ispocetka"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noviunos" />

</androidx.constraintlayout.widget.ConstraintLayout>